@@ -28,6 +28,7 @@
   - Added near_equal?/3
   - Added floor/1 and ceiling/1
   - Added increment/2 and decrement/2
+  - increment/2 and decrement/2 support `:both` option
   
 
 ## v0.11.2
